# C2_Rust

./: .DockerFile  .dockerignore  .gitignore  Cargo.toml  DockerFile  README.md  compose.yml  request.http  setup.sh
migrations/: 0001_tables.sql  0001_users_tables.sql  0002_add_task_result.sql  0002_tasks_table.sql  0003_history_task.sql  0004_task.sql
src/: main.rs  resource.rs
