[package]
name = "zarC2"
version = "0.1.9"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["http2","macros","ws"]}
serde = { version = "1.0.227", features = ["derive"] }
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "postgres", "macros","uuid","chrono"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "net"]}
serde_json =  {version = "1" }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
env = "1.0.1"
chrono = {version = "0.4.43", features = ["serde"] }
